@@ -176,7 +176,7 @@ class SerialBase(FileLike):
 
     #  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -  -
 
-    # TODO: these are not realy needed as the is the BAUDRATES etc attribute...
+    # TODO: these are not really needed as the is the BAUDRATES etc. attribute...
     # maybe i remove them before the final release...
 
     def getSupportedBaudrates(self):
